--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -64,12 +64,31 @@
                     </div>
                 </div>
                 <div class="product__info">
-                    <div class="info__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea enim voluptatibus sapiente dolore vitae perspiciatis eos ducimus modi nemo provident repellat eveniet, doloribus consequuntur explicabo minima accusamus ratione sed? Assumenda soluta sequi ab autem totam cumque laudantium id quasi eligendi error asperiores, distinctio dolor consequuntur reiciendis porro quidem sint commodi.</div>
+                    <div class="info__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea enim voluptatibus sapiente dolore vitae perspiciatis eos ducimus modi nemo provident repellat eveniet, doloribus consequuntur explicabo minima accusamus ratione sed? Assumenda soluta sequi ab autem totam cumque laudantium id quasi eligendi error asperiores, distinctio dolor consequuntur reiciendis porro quidem sint commodi.
+                        <div class="text__prop">
+                            <div class="prop_key">Масса:</div>
+                            <div class="prop_val">350 kg</div>
+                        </div>
+                        <div class="text__prop">
+                            <div class="prop_key">Габариты:</div>
+                            <div class="prop_val">2x2x2 м.</div>
+                        </div>
+                    </div>
+                    <div class="info__date">Варианты доставки:</div>
+                    <div class="delivery">
+                        <div class="delivery__option _picked" data-val="econom">
+                            Econom
+                        </div>
+                        <div class="delivery__option" data-val="fast">
+                            Fast
+                        </div>
+                        <input type="text" name="delivery_option" value="econom">
+                    </div>
                     <div class="info__buy">
                         <div class="info__price">739&#8381</div>
                         <button>В корзину</button>
                     </div>
-                    <div class="info__date">Будет доставлено: <b>24.04.2024</b></div>
                 </div>
             </div>
         </div>
