--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -77,14 +77,15 @@
                     </div>
                     <div class="info__date">Варианты доставки:</div>
                     <div class="delivery">
-                        <div class="delivery__option _picked" data-val="econom">
+                        <div class="delivery__option _picked" data-val="econom" data-date="Через год">
                             Econom
                         </div>
-                        <div class="delivery__option" data-val="fast">
+                        <div class="delivery__option" data-val="fast" data-date="Завтра">
                             Fast
                         </div>
                         <input type="text" name="delivery_option" value="econom">
                     </div>
+                    <div class="info__date" id="delivery_date">Текущая дата доставки: <b>Через год</b></div>
                     <div class="info__buy">
                         <div class="info__price">739&#8381</div>
                         <button>В корзину</button>
