--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -5,3 +5,172 @@
     {{ form.as_p }}
     <input type="submit">
 </form>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+
+    <title>Hack2024</title>
+</head>
+<body>
+    <div class="header">
+        <div class="header-main container">
+            <a href="/index.html" class="header__logo">Kodopes</a>
+            <div class="header-side">
+                <form class="header__search">
+                    <input type="text" required placeholder="Поиск">
+                    <button>
+                        <img src="assets/images/ui/search.svg" alt="Искать">
+                    </button>
+                </form>
+                <div class="header__nav">
+                    <a href="/registry.html" class="nav__account">
+                        <img src="assets/images/ui/user.svg" alt="Аккаунт">
+                    </a>
+                    <a href="#" class="nav__vk">
+                        <img src="assets/images/ui/vk.svg" alt="VK">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="cataloque">
+        <div class="cataloque-main container">
+            <div class="cataloque__nav">
+                <a href="#">Товары</a>
+                <a href="#">Заказы</a>
+            </div>
+        </div>
+    </div>
+    <div class="hero">
+        <div class="hero-main container">
+            <h1 class="hero__title">Самый лучший маркетплейс по доставке чугуна.</h1>
+            <p class="hero__subtitle">Прямо сейчас скидки до 50% на все товары из категории “Всё металлическое”.</p>
+            <a href="#" class="hero__action">отлично!</a>
+        </div>
+    </div>
+    <div class="offers">
+        <div class="offers-main container">
+            <div class="offers__dscr">
+                <h1 class="offers__title">Различные варианты доставки</h1>
+                <p class="offers__subtitle">Прямо сейчас скидки до 50% на все товары из категории “Всё металлическое”.</p>
+                <a href="#" class="offers__action">отлично!</a>
+            </div>
+            <div class="offers__list">
+                <div class="offer__card">
+                    <h2 class="card__title">Econom</h2>
+                    <ul class="card__props">
+                        <li class="prop">
+                            <b>Стоимость: </b>80$
+                        </li>
+                        <li class="prop">
+                            <b>Скорость доставки: </b>почта России.
+                        </li>
+                        <li class="prop">
+                            <b>Идеально подходит</b> для закупок заранее.
+                        </li>
+                    </ul>
+                    <a href="#" class="card__action">посмотреть</a>
+                </div>
+                <div class="offer__card">
+                    <h2 class="card__title">Econom</h2>
+                    <ul class="card__props">
+                        <li class="prop">
+                            <b>Стоимость: </b>80$
+                        </li>
+                        <li class="prop">
+                            <b>Скорость доставки: </b>почта России.
+                        </li>
+                        <li class="prop">
+                            <b>Идеально подходит</b> для закупок заранее.
+                        </li>
+                    </ul>
+                    <a href="#" class="card__action">посмотреть</a>
+                </div>
+                <div class="offer__card">
+                    <h2 class="card__title">Econom</h2>
+                    <ul class="card__props">
+                        <li class="prop">
+                            <b>Стоимость: </b>80$
+                        </li>
+                        <li class="prop">
+                            <b>Скорость доставки: </b>почта России.
+                        </li>
+                        <li class="prop">
+                            <b>Идеально подходит</b> для закупок заранее.
+                        </li>
+                    </ul>
+                    <a href="#" class="card__action">посмотреть</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="guide">
+        <div class="guide-main container">
+            <div class="guide__card">
+                <div class="guide__card-text">
+                    <h1>Как заказать нужный товар?</h1>
+                    <p>Шаг 1. Добавьте Ваш товар в корзину.</p>
+                    <p>Шаг 2. Выберите оптимальный способ доставки</p>
+                    <p>Шаг 3. Готово! Ожидайте доставки.</p>
+                    <a href="#" class="card__action">
+                        к ленте товаров!
+                    </a>
+                </div>
+                <div class="guide__card-image">
+                    
+                </div>
+            </div>
+            <div class="guide__card">
+                <div class="guide__card-text">
+                    <h1>Как заказать нужный товар?</h1>
+                    <p>Шаг 1. Добавьте Ваш товар в корзину.</p>
+                    <p>Шаг 2. Выберите оптимальный способ доставки</p>
+                    <p>Шаг 3. Готово! Ожидайте доставки.</p>
+                    <a href="#" class="card__action">
+                        к ленте товаров!
+                    </a>
+                </div>
+                <div class="guide__card-image">
+                    
+                </div>
+            </div>
+            <div class="guide__card">
+                <div class="guide__card-text">
+                    <h1>Как заказать нужный товар?</h1>
+                    <p>Шаг 1. Добавьте Ваш товар в корзину.</p>
+                    <p>Шаг 2. Выберите оптимальный способ доставки</p>
+                    <p>Шаг 3. Готово! Ожидайте доставки.</p>
+                    <a href="#" class="card__action">
+                        к ленте товаров!
+                    </a>
+                </div>
+                <div class="guide__card-image">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-main container">
+            <h1 class="footer__title">Kodopes</h1>
+            <div class="footer__nav">
+                <a href="/index.html">Главная</a>
+                <a href="/index.html">О доставке</a>
+                <a href="/privacy-policy.html">Политика конфиденциальности</a>
+                <a href="/contacts.html">Контакты</a>
+                <a href="#">FAQ</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
