--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -78,17 +78,18 @@
                     </div>
                     <div class="info__date">Варианты доставки:</div>
                     <div class="delivery">
-                        <div class="delivery__option _picked" data-val="econom" data-date="Через год">
+                        <div class="delivery__option _picked" data-val="econom" data-price='{{ result_price }} руб' data-date="{{ econom }} часов">
                             Econom
                         </div>
-                        <div class="delivery__option" data-val="fast" data-date="Завтра">
+                        <div class="delivery__option" data-val="fast" data-date="{{ fast }} часов" data-price='{{ result_price_fast }} руб'>
                             Fast
                         </div>
                         <input type="text" name="delivery_option" value="econom">
                     </div>
-                    <div class="info__date" id="delivery_date">Текущая дата доставки: <b>Через год</b></div>
+                    <div class="info__date" id="delivery_date">Доставим через: <b>{{ econom }} часов</b></div>
+                    <div class="info__date" id="delivery_date">{{ notifiction }}</div>
                     <div class="info__buy">
-                        <div class="info__price">{{ product.price }} руб</div>
+                        <div class="info__price" id='result_price'>{{ result_price }} руб</div>
                         <button>В корзину</button>
                     </div>
                 </div>
